--- a/CSS/facts.css
+++ b/CSS/facts.css
@@ -1,1 +1,43 @@
 /* Victoria's CSS - Can remove this line */
+main {
+    background-color: #fce5bf;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 800px;
+    margin: 40px auto;
+    font-family: Verdana, sans-serif;
+    text-align: center;
+    box-shadow: 0 2px 10px #000000;
+}
+
+h1 {
+    color: #000000;
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+
+#facts-container {
+    margin-top: 20px;
+    padding: 25px 30px;
+    background-color: #ffce7e;
+    border: 2px solid #ffb300;
+    border-radius: 5px;
+    font-size: 18px;
+    color: #000000;
+    box-shadow: 0 2px 5px #000000;
+}
+
+button#facts-button {
+    background-color: #ffce7e;
+    color: #000000;
+    border: #ffb300 2px solid;
+    border-radius: 5px;
+    padding: 15px 25px;
+    font-size: 18px;
+    box-shadow: #000000 0 2px 5px;
+}
+
+button#facts-button:hover {
+    background-color: #ffb300;
+    color: #000000;
+}
