added comment for shared footer style in shared.css

--- a/CSS/shared.css
+++ b/CSS/shared.css
@@ -1,4 +1,5 @@
 /* Our CSS - Can remove this line */
+/* Shared footer style for the project */
 footer {
     background-color: #ffffff;
     color: #000000;
