--- a/CSS/facts.css
+++ b/CSS/facts.css
@@ -7,6 +7,11 @@ main {
     font-family: Verdana, sans-serif;
     text-align: center;
     box-shadow: 0 2px 10px #000000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
 }
 
 h1 {
