--- a/CSS/adopt.css
+++ b/CSS/adopt.css
@@ -13,7 +13,8 @@ main {
     box-shadow: 0 2px 10px #000000;
 }
 
-header {
+/* Changed "header" for ".page-title" due to above correction & redundant uses -Matt */
+.page-title {
     margin-bottom: 30px;
 }
 
@@ -23,7 +24,8 @@ h1 {
     margin-bottom: 10px;
 }
 
-header p {
+/* Changed "header" for ".page-title" due to above correction & redundant uses -Matt */
+.page-title p {
     font-size: 18px;
     color: #333333;
 }
