--- a/CSS/facts.css
+++ b/CSS/facts.css
@@ -16,7 +16,7 @@ However, the shared styles are used on the facts page. Please do not remove them
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 100vh;
+    flex: 1;
 }
 
 .facts-main h1 {
@@ -40,6 +40,7 @@ However, the shared styles are used on the facts page. Please do not remove them
 
 #facts-container img {
     max-width: 100%;
+    max-height: 500px;
     height: auto;
     margin: 20px 0;
     border-radius: 5px;
@@ -55,6 +56,7 @@ button#facts-button {
     padding: 15px 25px;
     font-size: 18px;
     box-shadow: #000000 0 2px 5px;
+    margin-top: 40px;
 }
 
 button#facts-button:hover {
@@ -130,6 +132,7 @@ End -Matt */
     main {
         margin: 20px 10px;
     }
+}
 /* Commented-Out due to Conflict with shared.css
     .hamburger-btn {
         display: block;
