--- a/CSS/shared.css
+++ b/CSS/shared.css
@@ -7,7 +7,7 @@
     --color-primary-hover: #e76f51;
     --color-background: bisque;
     --color-text: black;
-    -color-border: black;
+    --color-border: black;
     --font-size-base: 1rem;
     --font-size-site-title: 3.5rem;
     --spacing-xs: 4px;
